--- a/style.game.css
+++ b/style.game.css
@@ -104,3 +104,27 @@ background-color: #9ab8ed;
     justify-content: center;
     align-items: center;
 }
+@media screen and (max-width: 950px) {
+    .keyboard-row {
+        width: 350px;
+    background-color: #9ab8ed;
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    .key-tile {
+        width: 30px;
+        height: 30px;
+        margin: 1px;
+        border: 1px solid lightgray;
+    
+       
+        font-size: 20px;
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
