--- a/style.game.css
+++ b/style.game.css
@@ -127,4 +127,31 @@ background-color: #9ab8ed;
         align-items: center;
     }
 }
+@media screen and (max-width: 550px) {
+    #board{
+        width:300px;
+        height:420px;
+        margin: 0 auto;
+        margin-top: 3px;
+        display: flex;
+        flex-wrap: wrap;
+       
+    }
+    .tile {
+   
+        border: 2px solid lightgray;
+        width: 50px;
+        height: 50px;
+        margin: 2.5px;
+    
+        
+        color: black;
+        font-size: 36px;
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+}
 
