--- a/style.game.css
+++ b/style.game.css
@@ -152,6 +152,9 @@ background-color: #9ab8ed;
         justify-content: center;
         align-items: center;
     }
+    body{
+        overflow-y: scroll;
+    }
 
 }
 
